# rse_report_generator

./: .markdownlint.yaml  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
rse_report_generator/: __init__.py  __main__.py  config.py  gh_cli.py  report.py  repository.py  token.py
rse_report_generator/templates/: report.md.jinja
tests/: __init__.py  test_myproject.py
