[tool.poetry]
name = "rse_report_generator"
version = "0.1.0"
description = "RSE report generator: A tool to generate progress reports for RSE software projects"
authors = ["Alex Dewar <a.dewar@imperial.ac.uk>"]

[tool.poetry.scripts]
rse-report-generator = "rse_report_generator.__main__:main"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
githubkit = "^0.11.4"
pyyaml = "^6.0.1"
dateparser = "^1.2.0"
jinja2 = "^3.1.4"

[tool.poetry.dev-dependencies]
pytest = "^8.2"
pytest-cov = "^5.0.0"
pytest-mypy = "^0.10.0"
pytest-mock = "^3.7.0"
pre-commit = "^3.0.4"
ruff = "^0.4.3"

[tool.poetry.group.dev.dependencies]
types-pyyaml = "^6.0.12.20240311"
types-dateparser = "^1.2.0.20240420"

[tool.mypy]
disallow_any_explicit = true
disallow_any_generics = true
warn_unreachable = true
warn_unused_ignores = true
disallow_untyped_defs = true
exclude = [".venv/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
addopts = "-v --mypy -p no:warnings --cov=rse_report_generator --cov-report=html --doctest-modules --ignore=rse_report_generator/__main__.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["D", "E", "F", "I"] # pydocstyle, pycodestyle, Pyflakes, isort

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D100", "D104"] # Missing docstring in public module, Missing docstring in public package

[tool.ruff.lint.pydocstyle]
convention = "google"
